@@ -1,3 +1,7 @@
+2020-09-30 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Move general configuration to own "space" in the TCA, resolves #140
+
 2020-09-26 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Enforce strict Scheduler dependency, resolves #129
